Changed the design of the home page so that instead of Upcoming events and Your events it shows based on when the are and their session (Morning/Evening) to completely simpligfy and speed up access of info for the user. Also fixed alot of little things including home page error when no user is logged in, why the admin sign ups were not showing up.

--- a/Sportshall/altFrontend/static/css/main.css
+++ b/Sportshall/altFrontend/static/css/main.css
@@ -27,6 +27,26 @@ html, body{
 	100%{background-position:65% 0%}
 }
 
+.arrow {
+	border: solid black;
+	border-width: 0 3px 3px 0;
+	display: inline-block;
+	padding: 3px ;
+	margin: 5px;
+	transform: rotate(45deg);
+	-webkit-transform: rotate(45deg);
+	transition: .5s ease;
+}
+.arrow:hover{
+
+	cursor: pointer;
+}
+
+.rotated-180 {
+	transform: rotate(225deg);
+	-webkit-transform: rotate(225deg);
+}
+
 #main{
 	height: 100%;
 }
@@ -126,4 +146,12 @@ html, body{
 	border: 4px solid black;
 	padding: 8px;
 	margin: 0 10px;
+}
+
+#teacherBlock {
+	transition: height .5 ease;
+	overflow:hidden;
+}
+#teacherBlock:not(.toggled){
+	display:none;
 }
